SERVER-59898 Initialize value for $graphLookup outputIndex